--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <div class="temoignagesBckgd">
             <h2>Paroles de réussite</h2>
             <div class="temoignagesBoxes wrapper">
-                <div class="temoignageBox temoignageleft">
-                    <div class="starsFive">
+                <div class="temoignageBox temoignageHidden">
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -139,8 +139,8 @@
                     <p>Pamela m'a donné la confiance pour explorer un nouveau chemin professionnel. Ses conseils et son soutien ont été essentiels pour identifier mes forces, surmonter mes doutes et avancer avec détermination. Chaque session était inspirante et motivante.</p>
                     <small>Jessica V.</small>
                 </div>
-                <div class="temoignageBox">
-                    <div class="starsFour">
+                <div class="temoignageBox temoignageHidden">
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -150,8 +150,8 @@
                     <p>Grâce à Pamela, j'ai découvert de nouvelles perspectives professionnelles et gagné en assurance. Ses conseils éclairés et son soutien m'ont aidé à identifier mes points forts et à poursuivre mes objectifs avec confiance. Chaque session était une véritable source de motivation et d'inspiration.</p>
                     <small>Céline D.</small>
                 </div>
-                <div class="temoignageBox temoignageright">
-                    <div class="starsFive">
+                <div class="temoignageBox temoignageHidden">
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -179,15 +179,23 @@
                 <a href="index.html">Accueil</a>
                 <a href="#">Qui suis-je?</a>
                 <a href="#">Coaching</a>
-                <a href="versmetierideal.html" class="loadLink">Vers ton métier idéal</a>
+                
                 <a href="#">Prendre un rendez-vous</a>
                 <a href="#">Contact</a>
             </nav>
+            <a href="versmetierideal.html" class="loadLink">
+                <div class="homebtn footerbtn">
+                    <div class="click">
+                        <div>Vers ton métier idéal</div>
+                    </div>
+                </div>
+            </a>
             <nav class="politicsNav">
                 <span><a href="#">Politique de confidentialité</a></span>
                 <span><a href="#">Mentions légales</a></span>
             </nav>
         </div>
+        
     </footer>
     <div class="createdby">
         <small>Created by Laura Lepage</small>
@@ -199,6 +207,7 @@
     </div> -->
   
     <script src="scripts/main.js"></script> 
+    <script src="scripts/chargement.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 </body>
 </html>
