--- a/prendreunrendezvous.html
+++ b/prendreunrendezvous.html
@@ -9,7 +9,7 @@
     <title>Pamela G. Digital - Business Mentor</title>
 </head>
 <body>
-    <div class="metierIdealBox">
+    <div class="beigeBoxPages">
         <div class="cross">
             <div class="crossLine"></div>
             <div class="crossLine"></div>
@@ -18,13 +18,7 @@
         <div class="calendly-inline-widget" data-url="https://calendly.com/lauralepage028/coaching-gratuit" style="min-width:320px;height:700px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         <!-- Fin de widget en ligne Calendly -->
-
-
-
-
-
-
     </div>
-    <script src="scripts/main.js"></script> 
+    <script src="scripts/versmetierideal.js"></script> 
 </body>
 </html>
