--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -9,7 +9,7 @@
     <title>Pamela G. Digital - Business Mentor</title>
 </head>
 <body>
-    <div class="metierIdealBox">
+    <div class="beigeBoxPages">
         <div class="cross">
             <div class="crossLine"></div>
             <div class="crossLine"></div>
@@ -32,7 +32,6 @@
             <button onclick="restartQuiz()">Recommencer le quiz</button>
         </div>
     </div>
-    <script src="scripts/main.js"></script> 
     <script src="scripts/versmetierideal.js"></script> 
 </body>
 </html>
