--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -19,17 +19,30 @@
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
             <img src="images/PamG-icon.png" alt="PamG_miniLogo">
-            <div class="quiz">
-                <div id="quiz"></div>
-            </div>
+            <div class="quiz"></div>
         </div>
-        <div id="result" style="display:none;">
-            <p id="resultText"></p>
-            <p id="resultProfil"></p>
-            <p id="resultExplanation"></p>
-            <p id="resultPossibilities"></p>
-            <p id="resultConclusion"></p>
-            <button onclick="restartQuiz()">Recommencer le quiz</button>
+        <div class="result">
+            <div class="resultBox">
+                <div class="pamBossImg">
+                    <img src="images/PamBoss.JPG" alt="">
+                </div>
+                <div class="resultProfilBox">
+                    <div class="resultProfilBoxCenter">
+                        <p class="resultText"></p>
+                        <p class="resultProfil"></p>
+                        <p class="resultExplanation"></p>
+                        <p class="resultPossibilities"></p>
+                        <p class="resultConclusion"></p>
+                        <div class="btnsProfil">
+                            <a href="prendreunrendezvous.html" class="coachingBtn">
+                                <span>Je réserve mon coaching<div>30 minutes gratuites</div></span>
+                                
+                            </a>
+                            <a onclick="restartQuiz()" class="coachingBtn"><span>Recommencer le quiz</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="scripts/versmetierideal.js"></script> 
