--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -28,11 +28,11 @@
                 </div>
                 <div class="resultProfilBox">
                     <div class="resultProfilBoxCenter">
-                        <p class="resultText"></p>
-                        <p class="resultProfil"></p>
-                        <p class="resultExplanation"></p>
-                        <p class="resultPossibilities"></p>
-                        <p class="resultConclusion"></p>
+                        <span class="resultText"></span>
+                        <span class="resultProfil"></span>
+                        <div class="resultExplanation"></div>
+                        <div class="resultPossibilities"></div>
+                        <div class="resultConclusion"></div>
                         <div class="btnsProfil">
                             <a href="prendreunrendezvous.html" class="coachingBtn">
                                 <span>Je réserve mon coaching<div>30 minutes gratuites</div></span>
