--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <header>
-        <a href="#">
-            <div class="connect">
+        <a href="#" class="connect">
                 <i class="fa-regular fa-user"></i>
                 Se connecter
-            </div>
         </a>
         <div class="navBox">
             <div class="burgerMenu">
