--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <a href="#" class="connect">
+        <a href="identification.html" class="connect">
                 <i class="fa-regular fa-user"></i>
-                Se connecter
+                Mon compte
         </a>
         <div class="navBox">
             <div class="burgerMenu">
@@ -204,8 +204,9 @@
         <button class="refuse">Tout refuser</button>
     </div> -->
   
-    <script src="scripts/main.js"></script> 
+    <script type="module" src="scripts/main.js"></script> 
     <script src="scripts/chargement.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+    
 </body>
 </html>
