--- a/identification.html
+++ b/identification.html
@@ -21,7 +21,7 @@
              <a href="#" id="signupLink">Je m'inscris</a> | <a href="#" id="loginLink">Je me connecte</a>
              
             <!-- Partie "S'inscrire" -->
-            <div id="signupSection" style="display: none;" class="logSection">
+            <div id="signupSection"  class="logSection">
                 <form id="signupForm">
                     <div>
                         <label for="signupEmail">Adresse e-mail:</label><br>
@@ -42,7 +42,7 @@
             </div>
              
             <!-- Partie "Se connecter" -->
-            <div id="loginSection" class="logSection">
+            <div id="loginSection" class="logSection" style="display: none;">
                 <form id="loginForm">
                     <div>
                         <label for="loginEmail">Adresse e-mail :</label><br>
