--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <header>
         <a href="identification.html" class="connect">
                 <i class="fa-regular fa-user"></i>
-                Mon compte
+                Se connecter
         </a>
+        </div>
         <div class="navBox">
             <div class="burgerMenu">
                 <div class="burgerBar"></div>
