--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#">Coaching</a>
                     <a href="prendreunrendezvous.html">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
-                    <a href="versmetierideal.html" class="loadLink"><div class="btnMenuDown">Vers ton métier idéal</div></a>
+                    <a href="chargement.html" class="loadLink"><div class="btnMenuDown">Vers ton métier idéal</div></a>
                     <hr>
                     <a href="#"><i class="fa-regular fa-user"></i>Se connecter</a>
                 </nav>
@@ -41,7 +41,7 @@
                     <a href="prendreunrendezvous.html">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                 </nav>
-                <a href="versmetierideal.html" class="metiercallaction loadLink">Vers ton métier idéal</a>
+                <a href="chargement.html" class="metiercallaction loadLink">Vers ton métier idéal</a>
             </div>
         </div>
         <div class="logoBox">
@@ -109,7 +109,7 @@
                 <p><i class="fa-solid fa-caret-right"></i><span>Tu trouves difficile</span> de naviguer dans le monde numérique et tu aimerais être guidé par un mentor</p>
             </div>
             <p class="potentiel">Au moins une de ces situations te parle et tu es prêt(e) à débloquer ton potentiel dans le monde digital ?</p>
-            <a href="versmetierideal.html" >
+            <a href="chargement.html" >
                 <div class="homebtn mainbtn">
                     <div class="click loadLink">
                         <div>Clique pour démarrer le test !</div>
@@ -182,7 +182,7 @@
                 <a href="#">Prendre un rendez-vous</a>
                 <a href="#">Contact</a>
             </nav>
-            <a href="versmetierideal.html" class="loadLink">
+            <a href="chargement.html" class="loadLink">
                 <div class="homebtn footerbtn">
                     <div class="click">
                         <div>Vers ton métier idéal</div>
@@ -204,7 +204,7 @@
         <button class="accept">Autoriser tous les cookies</button>
         <button class="refuse">Tout refuser</button>
     </div> -->
-  
+    
     <script type="module" src="scripts/main.js"></script> 
     <script src="scripts/chargement.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
