--- a/chargement.html
+++ b/chargement.html
@@ -16,7 +16,10 @@
                 </div>
                 <div id="percentage">0%</div>
             </div>
-    </div>     
-    <script src="scripts/chargement.js"></script> 
+    </div>    
+    
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-auth-compat.js"></script>
+    <script type="module" src="scripts/chargement.js"></script> 
 </body>
 </html>
