firestore en place

--- a/identification.html
+++ b/identification.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="beigeBoxPages">
-        <div class="cross">
+        <div class="cross identificationCross">
             <div class="crossLine"></div>
             <div class="crossLine"></div>
         </div>
