--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="identification.html" class="connect">
+        <a href="identification.html" class="logFullScreen">
                 <i class="fa-regular fa-user"></i>
                 Se connecter
         </a>
@@ -30,7 +30,7 @@
                     <a href="#">Contact</a>
                     <a href="chargement.html" class="loadLink"><div class="btnMenuDown">Vers ton métier idéal</div></a>
                     <hr>
-                    <a href="#"><i class="fa-regular fa-user"></i>Se connecter</a>
+                    <a href="identification.html"><i class="fa-regular fa-user"></i>Se connecter</a>
                 </nav>
             </div>
             <div class="menuPrincipal wrapper">
@@ -204,6 +204,7 @@
         <button class="accept">Autoriser tous les cookies</button>
         <button class="refuse">Tout refuser</button>
     </div> -->
+    
     
     <script type="module" src="scripts/main.js"></script> 
     <script src="scripts/chargement.js"></script> 
