--- a/moncompte.html
+++ b/moncompte.html
@@ -7,18 +7,21 @@
     <link rel="icon" href="images/favicon-16x16.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3379e155de.js" crossorigin="anonymous"></script>
     <title>Pamela G. Digital - Business Mentor</title>
+    
 </head>
 <body>
     <div class="beigeBoxPages">
-        <div class="cross prendrerdvCross">
+        <div class="cross moncompteCross">
             <div class="crossLine"></div>
             <div class="crossLine"></div>
         </div>
-        <!-- Début de widget en ligne Calendly -->
-        <div class="calendly-inline-widget" data-url="https://calendly.com/lauralepage028/coaching-gratuit" style="min-width:320px;height:700px;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-        <!-- Fin de widget en ligne Calendly -->
-    </div> 
-    <script src="scripts/prendreunrendezvous.js"></script> 
+        <div class="resultmoncompte"></div>
+
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+    <script type="module" src="scripts/moncompte.js"></script> 
 </body>
 </html>
