--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="beigeBoxPages">
-        <div class="cross">
+        <div class="cross versmetieridealCross">
             <div class="crossLine"></div>
             <div class="crossLine"></div>
         </div>
@@ -44,6 +44,10 @@
             </div>
         </div>
     </div>
-    <script src="scripts/versmetierideal.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+    <script type="module" src="scripts/versmetierideal.js"></script> 
+    
 </body>
 </html>
