--- a/chargement.html
+++ b/chargement.html
@@ -9,7 +9,7 @@
     <title>Pamela G. Digital - Business Mentor</title>
 </head>
 <body>
-    <div class="beigeBoxPages">
+    <div class="beigeBoxPages boxPages">
             <div id="loading">
                 <div class="progress-bar">
                     <div class="progress"></div>
