--- a/identification.html
+++ b/identification.html
@@ -10,12 +10,11 @@
     
 </head>
 <body>
-    <div class="beigeBoxPages">
+    <div class="beigeBoxPages boxPages">
         <div class="cross identificationCross">
             <div class="crossLine"></div>
             <div class="crossLine"></div>
         </div>
-        
          <div class="logBox">
              <!-- Liens pour choisir entre "S'inscrire" et "Se connecter" -->
              <a href="#" id="signupLink">Je m'inscris</a> | <a href="#" id="loginLink">Je me connecte</a>
@@ -24,7 +23,7 @@
             <div id="signupSection"  class="logSection">
                 <form id="signupForm">
                     <div>
-                        <label for="nameSignup">Prénom:</label><br>
+                        <label for="nameSignup">Nom d'utilisateur:</label><br>
                         <input type="text" id="nameSignup" name="firstname" required>
                     </div> 
                     <div>
