--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 <body>
     <header>
-        <a href="identification.html" class="logFullScreen">
+        <a href="identification.html" class="logFullScreen logConnexion">
                 <i class="fa-regular fa-user"></i>
                 Se connecter
         </a>
+        <a href="moncompte.html" class="logFullScreen logMonCompte">
+            Accéder à mon compte
+        </a>
+    
         </div>
         <div class="navBox">
             <div class="burgerMenu">
@@ -109,9 +113,9 @@
                 <p><i class="fa-solid fa-caret-right"></i><span>Tu trouves difficile</span> de naviguer dans le monde numérique et tu aimerais être guidé par un mentor</p>
             </div>
             <p class="potentiel">Au moins une de ces situations te parle et tu es prêt(e) à débloquer ton potentiel dans le monde digital ?</p>
-            <a href="chargement.html" >
+            <a href="chargement.html" class="loadLink">
                 <div class="homebtn mainbtn">
-                    <div class="click loadLink">
+                    <div class="click">
                         <div>Clique pour démarrer le test !</div>
                         <div>Je te guide vers ta nouvelle carrière numérique </div>
                     </div>
