--- a/prendreunrendezvous.html
+++ b/prendreunrendezvous.html
@@ -9,7 +9,7 @@
     <title>Pamela G. Digital - Business Mentor</title>
 </head>
 <body>
-    <div class="beigeBoxPages">
+    <div class="beigeBoxPages boxPages">
         <div class="cross prendrerdvCross">
             <div class="crossLine"></div>
             <div class="crossLine"></div>
