--- a/moncompte.html
+++ b/moncompte.html
@@ -10,18 +10,18 @@
     
 </head>
 <body>
-    <div class="beigeBoxPages">
+    <div class="aubergineBoxPages boxPages">
         <div class="cross moncompteCross">
-            <div class="crossLine"></div>
-            <div class="crossLine"></div>
+            <div class="crossLine lineCompte"></div>
+            <div class="crossLine lineCompte"></div>
         </div>
-        <div class="resultmoncompte"></div>
-
+        <div class="helloPart"></div>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
     <script type="module" src="scripts/moncompte.js"></script> 
+    <script type="module" src="scripts/firebase-registration.js"></script>
 </body>
 </html>
