--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <a href="identification.html" class="logFullScreen logConnexion">
+        <div class="logInBox">
+            <a href="moncompte.html" class="logMonCompte">
+                Accéder à mon compte
+            </a>
+            <a href="identification.html" class="logConnexion">
                 <i class="fa-regular fa-user"></i>
                 Se connecter
-        </a>
-        <a href="moncompte.html" class="logFullScreen logMonCompte">
-            Accéder à mon compte
-        </a>
-    
+            </a>
         </div>
         <div class="navBox">
             <div class="burgerMenu">
@@ -34,7 +34,13 @@
                     <a href="#">Contact</a>
                     <a href="chargement.html" class="loadLink"><div class="btnMenuDown">Vers ton métier idéal</div></a>
                     <hr>
-                    <a href="identification.html"><i class="fa-regular fa-user"></i>Se connecter</a>
+                    <div class="logInBoxMenuDown">
+                        <a href="moncompte.html" class="logMonCompte">
+                            Accéder à mon compte
+                        </a>
+                        <a href="identification.html" class="logConnexion"><i class="fa-regular fa-user"></i>Se connecter</a>
+                    </div>
+                    
                 </nav>
             </div>
             <div class="menuPrincipal wrapper">
