--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="aubergineCircle"></div>
         <img src="images/arrow.png" alt="" class="arrow">
         <div class="textbeforebtn">
-            Fais le test pour y voir plus clair !
+            Cela va t'aider à y voir plus clair !
         </div>
         <a href="chargement.html" class="loadLink">
             <div class="homebtn headerbtn">
