--- a/moncompte.html
+++ b/moncompte.html
@@ -15,7 +15,9 @@
             <div class="crossLine lineCompte"></div>
             <div class="crossLine lineCompte"></div>
         </div>
-        <div class="helloPart"></div>
+        <div class="helloPart">
+            
+        </div>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app-compat.js"></script>
