--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logInBox">
             <a href="moncompte.html" class="logMonCompte">
-                Accéder à mon compte
+                Accéde à ton compte
             </a>
             <a href="identification.html" class="logConnexion">
                 <i class="fa-regular fa-user"></i>
@@ -36,7 +36,7 @@
                     <hr>
                     <div class="logInBoxMenuDown">
                         <a href="moncompte.html" class="logMonCompte">
-                            Accéder à mon compte
+                            Accéde à ton compte
                         </a>
                         <a href="identification.html" class="logConnexion"><i class="fa-regular fa-user"></i>Se connecter</a>
                     </div>
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="logoBox">
-            <img src="images/PamG-logo.png" alt="">
+            <img src="images/PamG-logo.png" alt="Logo Pamela G Digital">
             <div class="sublogo">
                 <span>Business Mentor</span>
                 <span>Coaching</span>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="aubergineCircle"></div>
-        <img src="images/arrow.png" alt="" class="arrow blinking">
+        <img src="images/arrow.png" alt="Flèche" class="arrow blinking">
         <!-- <div class="textbeforebtn">
             Cela va t'aider à y voir plus clair !
         </div> -->
@@ -92,22 +92,22 @@
             <h2>Mon approche</h2>
             <div class="approcheBoxes wrapper">
                 <div class="approcheBox approcheHide">
-                    <img src="images/confiance.png" alt="" class="rotate-image">
+                    <img src="images/confiance.png" alt="Image d'un coeur" class="rotate-image">
                     <h3>Confiance</h3>
                     <p>La confiance en soi est la clé qui ouvre les portes de la réussite. Ensemble, nous allons cultiver cette confiance, étape par étape, pour que tu puisses briller.</p>
                 </div>
                 <div class="approcheBox approcheHide">
-                    <img src="images/inspiration.png" alt="" class="rotate-image">
+                    <img src="images/inspiration.png" alt="Image d'une ampoule sur la couverture d'un livre" class="rotate-image">
                     <h3>Inspiration</h3>
                     <p>Trouve l'inspiration dans chaque instant, chaque défi, chaque réussite. Ensemble, transformons cette inspiration en actions concrètes pour réaliser tes rêves les plus audacieux.</p>
                 </div>
                 <div class="approcheBox approcheHide">
-                    <img src="images/motivation.png" alt="" class="rotate-image">
+                    <img src="images/motivation.png" alt="Image d'une médaille" class="rotate-image">
                     <h3>Motivation</h3>
                     <p>Je suis là pour t'inspirer, te guider et te voir atteindre des sommets que tu n'aurais jamais imaginés possibles.</p>
                 </div>
                 <div class="approcheBox approcheHide">
-                    <img src="images/productivite.png" alt="" class="rotate-image">
+                    <img src="images/productivite.png" alt="Image d'une flèche montante" class="rotate-image">
                     <h3>Productivité</h3>
                     <p>C'est l'art de maximiser chaque instant. Ensemble, trouvons les outils et les stratégies pour que chaque action compte vers ton succès.</p>
                 </div>
@@ -116,13 +116,13 @@
         <div class="rappelbtn">
             <h2>Tu te reconnais?</h2>
             <div class="reconnaisBox wrapper">
-                <p><i class="fa-solid fa-caret-right"></i><span>Tu n'arrives pas</span> à trouver ta voie dans le monde du digital</p>
-                <p><i class="fa-solid fa-caret-right"></i><span>Tu ne sais pas</span> par où commencer pour te lancer dans une carrière digitale</p>
-                <p><i class="fa-solid fa-caret-right"></i><span>Tu aimerais</span> te réorienter vers le secteur du digital, mais c'est compliqué de le faire seul</p>
-                <p><i class="fa-solid fa-caret-right"></i><span>Tu ne sais pas</span> quelles compétences digitales développer pour réussir ta transition professionnelle</p>
-                <p><i class="fa-solid fa-caret-right"></i><span>Tu trouves difficile</span> de naviguer dans le monde numérique et tu aimerais être guidé par un mentor</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu n'arrives pas</span> à trouver ta voie dans le monde du digital.</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu ne sais pas</span> par où commencer pour te lancer dans une carrière digitale.</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu aimerais</span> te réorienter vers le secteur du digital, mais c'est compliqué de le faire seul.</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu ne sais pas</span> quelles compétences digitales développer pour réussir ta transition professionnelle.</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu trouves difficile</span> de naviguer dans le monde numérique et tu aimerais être guidé par un mentor.</p>
             </div>
-            <p class="potentiel">Au moins une de ces situations te parle et tu es prêt(e) à débloquer ton potentiel dans le monde digital ?</p>
+            <p class="potentiel">Au moins une de ces situations te parle et tu es prêt(e) à débloquer ton potentiel dans le monde digital?</p>
             <a href="chargement.html" class="loadLink">
                 <div class="homebtn mainbtn">
                     <div class="click">
