--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -35,9 +35,9 @@
                         <div class="resultConclusion"></div>
                         <div class="btnsProfil">
                             <a href="prendreunrendezvous.html" class="coachingBtn">
-                                <span>Je réserve mon coaching<div>30 minutes gratuites</div></span>
+                                <span>Réserve ton coaching<div>30 minutes gratuites</div></span>
                             </a>
-                            <a onclick="restartQuiz()" class="coachingBtn"><span>Recommencer le quiz</span></a>
+                            <a onclick="restartQuiz()" class="coachingBtn"><span>Recommence le test</span></a>
                         </div>
                     </div>
                 </div>
